# DT_lite_QSDsan

./: .dockerignore  .gitignore  BSM1_diagram_ASCII.txt  BSM1_system_diagram.html  CLAUDE.md  Dockerfile  PROMPT_GENERAR_EXCEL_CONFIGURACION_EDAR.md  RESULTADOS_VALIDACION_BSM1.txt  docker-compose.yml  pyproject.toml  requirements.txt  resultados_bsm1_ss_componentes.csv  run_bsm1_simulation.py  setup-claude-project (1).md
.claude/: settings.json
.claude/agents/: simulation-validator.md
.claude/commands/: check-environment.md  docker-build.md  explore-component.md  run-simulation.md  validate-results.md
.claude/rules/: code-style.md  docker.md  server.md  simulation-conventions.md  testing.md  ui-design.md
app/: __init__.py  config.py  engine.py  excel_parser.py  excel_template.py  main.py  models.py  patch.py
app/static/: index.html
reports/: ANALISIS_EXPERTO.txt  INFORME_SENSIBILIDAD_PARAMETROS.txt
scripts/: generate_expert_analysis.py  generate_parameter_report.py
tests/: test_api.py  test_engine.py  test_excel_upload.py  test_trends.py
