[project]
name = "qsdsan-bsm1-simulator"
version = "1.0.0"
description = "BSM1 (Benchmark Simulation Model No. 1) validation suite using QSDsan/EXPOsan"
requires-python = ">=3.13"
dependencies = [
    "qsdsan==1.3.0",
    "exposan==1.4.3",
    "numpy",
    "pandas",
    "scipy",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (ASM1 uses S_I, X_S, etc.)
    "B007",   # unused loop variable (common in scientific iteration)
]

[tool.ruff.lint.isort]
known-third-party = ["numpy", "pandas", "scipy"]
known-local-folder = ["qsdsan", "exposan"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
markers = ["slow: marks tests that run full simulation (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
